// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package thinkit;

option cc_generic_services = false;

message Metric {
  string name = 1;
  oneof value {
    int32 int_value = 2;
    double double_value = 3;
    string string_value = 4;
  }
}

message MetricGroup {
  string name = 1;
  repeated Metric metrics = 2;
}
